<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/nav_bottom_publications"
        android:enabled="true"
        android:icon="@drawable/selector_ic_book_open"
        android:title="@string/nav_item_publications"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/nav_bottom_experts"
        android:enabled="true"
        android:icon="@drawable/selector_ic_people"
        android:title="@string/nav_item_experts"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/nav_bottom_reviews"
        android:icon="@drawable/selector_ic_error"
        android:title="@string/nav_item_reviews"
        app:showAsAction="ifRoom" />
</menu>