<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activity.FeedbackActivity">

    <ImageView
        android:id="@+id/image_view_pdf_view_fragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@android:color/white"
        android:scaleType="fitCenter"
        android:contentDescription="@null"/>

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:measureWithLargestChild="true"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
            android:id="@+id/button_text_previous_page_pdf_view_fragment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:insetBottom="6dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:text="@string/button_text_previous_page_pdf_view_fragment"
            android:textColor="@color/colorWhite"
            android:textSize="12sp"
            app:backgroundTint="@color/selector_pdf_navigation"
            app:cornerRadius="0dp"
            app:icon="@drawable/ic_keyboard_arrow_left_white_24dp"
            app:iconGravity="textStart"
            app:iconTint="@color/colorWhite" />

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
            android:id="@+id/button_next_page_pdf_view_fragment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:insetBottom="6dp"
            android:text="@string/button_text_next_page_pdf_view_fragment"
            android:textColor="@color/colorWhite"
            android:textSize="12sp"
            app:backgroundTint="@color/selector_pdf_navigation"
            app:cornerRadius="0dp"
            app:icon="@drawable/ic_keyboard_arrow_right_white_24dp"
            app:iconGravity="textEnd"
            app:iconTint="@color/colorWhite" />
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:id="@+id/button_give_feedback_pdf_view_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:insetBottom="6dp"
        android:text="@string/button_text_give_feedback_pdf_view_fragment"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:textColor="@color/colorWhite"
        android:textSize="12sp"
        android:visibility="gone"
        app:backgroundTint="@color/colorAccent"
        app:cornerRadius="0dp" />

</LinearLayout>